--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 [
-{ "Title" : "The Outfit (2022)" , "Img" : "http://mycinema.asia/image//20220928/avatar_12119.jpg" , "Desc" : "ဇာတ်လမ်းခိုင်မာပြီး အနှစ်အရသာရှိတဲ့ Crime, Drama ကားမျိုးကို ကြိုက်နှစ်သက်တယ်ဆိုရင်တော့ ဒီကားကကွက်တိပါပဲ။ အပ်ချုပ်သမားတစ်ယောက်ဆိုရင် သူ့ဘဝကြီးကိုအေးအေးချမ်းချမ်းနဲ့ ဖြတ်သန်းနေမယ်လို့ပဲ လူတိုင်းစိတ်ကူးမိကြမှာပါ။ ဒါပေမဲ့ ချီကာဂိုမြို့တစ်နေရာက အနောက်တိုင်းဝတ်စုံလက်ရာကောင်းတွေ ချုပ်လုပ်ပေးတဲ့ အင်္ဂလိပ်လူမျိုးကြီးတစ်ယောက်ကတော့ သူ့ဘဝမှာဆန်းကြယ်မှုအစုံ ကြုံလာရမယ်ဆိုတာ ဘယ်ထင်ထားပါ့မလဲ။ ဒါမှမဟုတ် သူထင်ထားလေမလား။"
+{ "Title" : "The Outfit (2022)" , "img" : "http://mycinema.asia/image//20220928/avatar_12119.jpg" , "Desc" : "ဇာတ်လမ်းခိုင်မာပြီး အနှစ်အရသာရှိတဲ့ Crime, Drama ကားမျိုးကို ကြိုက်နှစ်သက်တယ်ဆိုရင်တော့ ဒီကားကကွက်တိပါပဲ။ အပ်ချုပ်သမားတစ်ယောက်ဆိုရင် သူ့ဘဝကြီးကိုအေးအေးချမ်းချမ်းနဲ့ ဖြတ်သန်းနေမယ်လို့ပဲ လူတိုင်းစိတ်ကူးမိကြမှာပါ။ ဒါပေမဲ့ ချီကာဂိုမြို့တစ်နေရာက အနောက်တိုင်းဝတ်စုံလက်ရာကောင်းတွေ ချုပ်လုပ်ပေးတဲ့ အင်္ဂလိပ်လူမျိုးကြီးတစ်ယောက်ကတော့ သူ့ဘဝမှာဆန်းကြယ်မှုအစုံ ကြုံလာရမယ်ဆိုတာ ဘယ်ထင်ထားပါ့မလဲ။ ဒါမှမဟုတ် သူထင်ထားလေမလား။"
 }
 ]
